# devxplatform

./: .env.example  .eslintrc.cjs  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  .release.json  ARCHITECTURE.md  CHANGELOG.md  COMPREHENSIVE-IDE-INTEGRATION-TEST-REPORT.md  DOCKER_FIXES_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  README.md  RESILIENCE_PATTERNS.md  SECURITY-FIXES-REQUIRED.md  TERRAFORM_RECONSTRUCTION_SUCCESS.md  agent-validation-tracker.md  cicd-templates-readme.md  comprehensive-ide-integration-test.js  deployment-strategies.md  docker-build-verification.sh  docker-compose.test.yml  failed-tests-summary.md  fix-docker-credentials.sh  go-template-fix-summary.md  healthcheck.js  memory-review-summary.md  package-lock.json  package.json  quick-start.sh  recommendations.md  start.sh  static-ide-integration-analysis.js  test-api-security.js  test-ide-integration-report.md  test-ide-integration.js  test-security-validation.js  tsconfig.json  (+2 more)
.claude/: config.json
api/: .env.example  jest.config.js  package-lock.json  package.json
app/: layout.tsx  page.tsx
cli/: package-lock.json  package.json  tsconfig.json
infrastructure/: README.md
patterns/: package-lock.json  package.json  tsconfig.json
portal/: next.config.js  (+3 more)
templates/rust/actix/: .env.example  Cargo.toml  Dockerfile  README.md
templates/rust/actix/migrations/: 001_create_users_table.sql
templates/rust/actix/src/: config.rs  errors.rs  main.rs
templates/rust/actix/src/handlers/: health.rs  users.rs
templates/rust/actix/src/middleware/: auth.rs  mod.rs  request_id.rs
templates/rust/actix/src/models/: mod.rs  user.rs
templates/rust/actix/src/services/: mod.rs  user_service.rs
templates/rust/actix/src/utils/: hash.rs  jwt.rs
templates/rust/tonic/: Cargo.toml  build.rs
templates/rust/tonic/proto/: health.proto  user.proto
templates/rust/tonic/src/: config.rs  errors.rs  server.rs
templates/rust/tonic/src/interceptors/: mod.rs
templates/rust/tonic/src/models/: mod.rs  user.rs
templates/rust/tonic/src/utils/: mod.rs
(+621 files in other folders)
