[package]
name = "actix-template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actix-template"
path = "src/main.rs"

[dependencies]
actix-web = "4.5"
actix-rt = "2.9"
actix-cors = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
validator = { version = "0.18", features = ["derive"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

[dev-dependencies]
actix-test = "0.1"
tokio-test = "0.4"